# CaptionA.cc

./: .codecov.yml  .env.example  .env.local.template  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruffignore  .secrets.baseline  .worktree.config  CLAUDE.md  DEV_STAGING_SETUP.md  LICENSE.md  PROJECT.md  README.md  SCHEMA.md  STATE_MANAGEMENT.md  SUPABASE_SETUP_COMPLETE.md  TEXT_ANNOTATION_PLANNING.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  renovate.json  reprocess_video_ocr.py  ruff.toml
data-pipelines/caption-layout/: CHANGELOG.md  CLAUDE.md  HOMEBREW_AUTOMATION_SETUP.md  README.md  mkdocs.yml  pyproject.toml
data-pipelines/caption-layout/.claude/: development.md  documentation.md  testing.md
data-pipelines/caption-layout/.claude/handoffs/: README.md
data-pipelines/caption-layout/.claude/workflows/: bug-fixing.md  ci-cd.md  feature-development.md  releasing.md
data-pipelines/caption-layout/.run/: Python tests in cli_template.run.xml  Python tests in docs.run.xml  Python tests in tests.run.xml
data-pipelines/caption-layout/dev-docs/: README.md
data-pipelines/caption-layout/docs/: conftest.py
data-pipelines/caption-layout/scripts/: configure-github.sh
data-pipelines/caption-layout/tests/: __init__.py  test_cli_coverage.py  test_main.py
data-pipelines/caption_boundaries/: ARCHITECTURE_GUIDE.md  INFERENCE_SERVICE_DESIGN.md  MLOPS_SUMMARY.md  QUICKSTART_MODAL.md  README.md  pyproject.toml
data-pipelines/caption_boundaries/docs/: MODAL_SETUP.md  modal-cost-safeguards.md
data-pipelines/caption_boundaries/migrations/: 001_drop_ocr_columns.py
data-pipelines/caption_boundaries/scripts/: create_training_dataset.py  setup_modal.sh  test_boundaries_db.py  test_font_embeddings.py  test_frame_extraction.py  upload_model_to_modal.py
data-pipelines/caption_frame_extents/: ARCHITECTURE_GUIDE.md  IMPROVEMENTS.md  INFERENCE_SERVICE_DESIGN.md  MLOPS_SUMMARY.md  QUICKSTART_MODAL.md  README.md  pyproject.toml
data-pipelines/caption_frame_extents/docs/: MODAL_SETUP.md  modal-cost-safeguards.md
data-pipelines/caption_frame_extents/migrations/: 001_drop_ocr_columns.py
data-pipelines/caption_frame_extents/scripts/: create_training_dataset.py  setup_modal.sh  test_caption_frame_extents_db.py  test_frame_extraction.py  upload_model_to_modal.py
data-pipelines/caption_text/: README.md  pyproject.toml
data-pipelines/caption_text/tests/: __init__.py  test_database.py
data-pipelines/captionacc-modal/: INTERFACE_CONTRACT.md  PIPELINED_IMPLEMENTATION.md  TESTING_GUIDE.md  deploy.py  pyproject.toml  test_pipelined.py  test_sequential.py  view_output.py
data-pipelines/captionacc-modal/tests/: README.md  __init__.py  conftest.py
data-pipelines/crop_frames/: .gitignore  README.md  pyproject.toml
data-pipelines/crop_frames/.run/: Python tests in cli_template.run.xml  Python tests in docs.run.xml  Python tests in tests.run.xml
data-pipelines/crop_frames/dev-docs/: README.md
data-pipelines/crop_frames/tests/: __init__.py  test_cli.py  test_cli_coverage.py  test_cli_stats.py  test_comprehensive.py  test_explain.py  test_main.py  test_mkdocs_build.py
data-pipelines/extract-full-frames-and-ocr/: .gitignore  deploy.py  pyproject.toml
data-pipelines/extract-full-frames-and-ocr/.run/: Python tests in cli_template.run.xml  Python tests in tests.run.xml
data-pipelines/extract-full-frames-and-ocr/tests/: __init__.py  conftest.py  test_cli.py  test_cli_coverage.py  test_comprehensive.py  test_docs_validation.py  test_explain.py  test_full_frames_modal_integration.py  test_integration.py
services/api/: .dockerignore  .env.development.template  .env.example  DEPLOY.md  Dockerfile  README_DEPLOYMENTS.md  README_PROCESS_NEW_VIDEOS.md  README_VIDEO_RECOVERY.md  crontab  fly.dev.toml  fly.prod.toml  fly.staging.toml  fly.toml  prefect-dev.yaml  prefect-local.yaml  prefect-staging.yaml  prefect.yaml  pyproject.toml
services/api/.run/: API_ Debug Server.run.xml  API__Dev_Server.run.xml
services/api/app/: __init__.py  config.py  dependencies.py  main.py  prefect_runner.py
services/api/app/flows/: __init__.py  models.py  (+6 more)
services/api/docs/: SCHEDULED_RECOVERY.md
services/api/extensions/: .gitignore  SOURCES.md  download.sh  upload-to-wasabi.sh
services/api/scripts/: check_worker_status.py  create_work_pool.py  deploy_flows.sh  find_stuck_videos.py  register_flows.py  register_flows.sh  retry_stuck_videos.py  setup-local-dev.sh  start.sh  test_flow_run.py  trigger_process_new_videos.sh  trigger_recovery.sh
services/api/tests/: PYTEST_USAGE.md  TEST_PLAN.md  __init__.py  conftest.py  test_actions.py  test_actions_unimplemented.py  test_admin.py  test_auth.py  test_boxes.py  test_caption_repository.py  test_captions.py  test_database_state_repository.py  test_image_urls.py  test_layout.py  test_layout_consolidated.py  test_layout_repository.py  test_ocr.py  test_ocr_repository.py  test_preferences.py  test_s3_credentials.py  test_stats.py  test_sync_endpoints.py  test_webhooks.py  test_websocket_manager.py  test_websocket_sync.py
services/orchestrator/: .env.example  .gitignore  Dockerfile  MIGRATION.md  MODEL_FLOWS_TODO.md  Makefile  PREFECT_SERVER_TODO.md  README.md  WASABI_ARCHITECTURE.md  __init__.py  deploy.py  deploy.sh  fly.toml  ocr_client.py  prefect.yaml  pyproject.toml  queue_flow.py  serve_flows.py  setup.py  setup_automations.py  start-worker.sh  start_all.py  start_worker.py  supabase_client.py  wasabi_client.py
services/orchestrator/api/: __init__.py  main.py
services/orchestrator/docs/: in-progress-state-management.md  transparent-auto-save.md  wasabi-storage-integration.md
services/orchestrator/flows/: __init__.py  base_model_update.py  boundary_inference.py  caption_annotation.py  caption_frame_extents_inference.py  caption_median_ocr.py  crop_frames.py  crop_frames_to_webm.py  layout_annotation.py  upload_and_process_video.py  video_model_retrain.py  video_processing.py  video_processing_supabase.py  vp9_encoding.py
services/orchestrator/monitoring/: README.md  __init__.py  check_rejections.py  rejection_logger.py
(+1168 files in other folders)
