# CaptionA.cc - Workspace Configuration
# This file coordinates all packages in the monorepo
# Individual projects have their own pyproject.toml files

[project]
name = "captionacc-workspace"
version = "0.1.0"
description = "Captures hard-coded captions from video with accurate timing and content by establishing and leveraging priors and context"
requires-python = ">=3.13,<3.14"
dependencies = [
    "tqdm>=4.67.1",
    "pillow>=11.0.0",
    "crop_frames",
    "caption_boundaries",
    "caption_text",
    "full_frames",
    "orchestrator",
]

[tool.uv.workspace]
members = [
    # Note: captionacc-web is a TypeScript app, excluded from Python workspace
    "services/*",
    "data-pipelines/*",
    "packages/*",
]
exclude = [
    "apps/captionacc-web",
    "services/ocr-service",  # Standalone FastAPI service, not a workspace package
    "data-pipelines/docs",  # Documentation directory, not a Python package
    "**/__pycache__",  # Exclude all pycache directories
    "**/.pytest_cache",  # Exclude pytest cache
]

# Workspace-wide dependency version constraints
# These override individual package versions to ensure consistency across workspace members
# Policy: Keep all shared dependencies on same version unless there's a specific reason
[tool.uv]
override-dependencies = [
    # Add shared dependency constraints here as your monorepo grows
    # Example:
    # "fastapi>=0.115.0,<1.0",
    # "sqlalchemy>=2.0.36,<3.0",
    # "pydantic>=2.9.0,<3.0",
]

[tool.uv.sources]
crop_frames = { workspace = true }
caption-boundaries = { workspace = true }
caption-text = { workspace = true }
full-frames = { workspace = true }
orchestrator = { workspace = true }
vp9-utils = { workspace = true }
frames-db = { workspace = true }

# Common tool settings shared across all workspace members
[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [
    "*/_version.py",  # Exclude auto-generated version files from all ruff checks
    "**/*/_version.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort
ignore = []

[tool.ruff.format]
quote-style = "double"

# Common pyright settings for all workspace members
# Individual projects can override or extend these
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

# Workspace-level dev dependencies
# All workspace members inherit these tools automatically
# These are installed by default with `uv sync`
[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pyright>=1.1.350",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0.0",
    "dvc>=3.65.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
# Test collection configuration for workspace
testpaths = [
    "data-pipelines/caption_boundaries/tests",
    "data-pipelines/caption_text/tests",
    "packages/frames_db/tests",
    "packages/video_utils/tests",
    "services/orchestrator/tests",
]
# Skip directories with incomplete/skeleton tests
# These can be re-enabled once the modules are properly implemented
norecursedirs = [
    "data-pipelines/crop_frames/tests",
    "data-pipelines/full_frames/tests",
    "data-pipelines/layout_analysis",
    "packages/ocr_box_model",
    "packages/jetbrains_integration",
]
