[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "caption_boundaries"
# Version is automatically determined from git tags via hatch-vcs
dynamic = ["version"]
description = "Deep learning pipeline for caption boundary detection via frame pair comparison"
readme = "README.md"
dependencies = [
    # CLI and utilities
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Deep learning
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.30.0",  # For FontCLIP from HuggingFace

    # Experiment tracking
    "wandb>=0.16.0",

    # Image processing
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",

    # Data science
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",  # For train/val split

    # Database
    "sqlalchemy>=2.0.0",

    # Utilities
    "python-Levenshtein>=0.21.0",
    "pydantic>=2.0.0",

    # Internal packages
    "frames_db",
    "video_utils",
    "caption_models",
]

[project.scripts]
caption_boundaries = "caption_boundaries.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.400",
    "ruff>=0.14.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["src/caption_boundaries"]

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for multiple components",
    "slow: Slow tests (e.g., model training, skipped by default)",
    "gpu: Tests requiring GPU (CUDA or MPS)",
]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Function calls in argument defaults (typer idiom)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E741", "E501"]  # Allow short var names and long lines in tests
"*/_version.py" = ["UP", "I001"]  # Auto-generated file by hatch-vcs

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true

[tool.coverage.run]
source = ["src/caption_boundaries"]
omit = ["*/tests/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/caption_boundaries/_version.py"

[tool.uv.sources]
frames_db = { workspace = true }
video_utils = { workspace = true }
caption_models = { workspace = true }
