[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captionacc-modal"
version = "0.1.0"
description = "Modal serverless functions for CaptionA.cc video processing"
authors = [
    {name = "CaptionA.cc Team"}
]
requires-python = ">=3.11"
dependencies = [
    "modal>=0.63.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/captionacc_modal"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
