[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "extract_full_frames_and_ocr"
# Version is automatically determined from git tags via hatch-vcs
dynamic = ["version"]
description = "Extract full frames from video and run OCR using GPU acceleration"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "video_utils",
    "ocr",
    "caption_models",
    "frames_db",
    "gpu_video_utils",
]


[project.scripts]
extract-full-frames-and-ocr = "extract_full_frames_and_ocr.cli:app"


[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["src/extract_full_frames_and_ocr"]

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for multiple components",
    "property: Property-based tests (invariants)",
    "slow: Slow tests (skipped by default)",
]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Function calls in argument defaults (typer idiom)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E741", "E501"]  # Allow short var names and long lines in tests
"tests/generate_fixtures.py" = ["E402"]  # Module imports after sys.path modification
"*/_version.py" = ["UP", "I001"]  # Auto-generated file by hatch-vcs

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true

[tool.coverage.run]
source = ["src/extract_full_frames_and_ocr"]
omit = ["*/tests/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/extract_full_frames_and_ocr/_version.py"

[tool.uv.sources]
video_utils = { workspace = true }
ocr = { workspace = true }
caption_models = { workspace = true }
frames_db = { workspace = true }
gpu_video_utils = { workspace = true }
