[project]
name = "captionacc-api"
version = "0.1.0"
description = "CaptionA.cc API Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.35.0",
    "apsw>=3.48.0",           # SQLite wrapper with extension loading for CR-SQLite
    "supabase>=2.0.0",        # Supabase client for video_database_state
    "prefect>=3.0.0",         # Workflow orchestration
    "modal>=0.63.0",          # Serverless compute for video processing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Inherits workspace config from root pyproject.toml
# Only FastAPI-specific overrides here
[tool.ruff.lint]
extend-ignore = [
    "B008",   # Allow function calls in argument defaults (needed for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["E402"]  # Allow imports after sys.modules mocking

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportUnusedParameter = "none"  # Suppress unused parameter warnings (common in test fixtures)

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end integration tests with real services (Modal, Supabase, Wasabi)",
    "slow: Tests that take a long time to run (>10 seconds)",
]
