[project]
name = "orchestrator"
version = "1.0.0"
description = "Video processing workflow orchestration service"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0.0",
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "vp9-utils",
    "frames-db",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flows"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
